--- a/app/views/delete.erb
+++ b/app/views/delete.erb
@@ -5,6 +5,6 @@
     <title>Delete Post</title>
   </head>
   <body>
-    <h1><i><%= @post.name %></i> was deleted.</h1>
+    <h1><%= @post.name %> was deleted.</h1>
   </body>
 </html>
