--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -10,7 +10,7 @@
     <br><br>
     <ul>
       <% @posts.each do |post| %>
-      <li><a href="/posts/<%= post.id %>"><%= post.name %></li>
+      <li><a href="/posts/<%= post.id %>"><%= post.name %><br><%= post.content %></li>
       <% end %>
     </ul>
   </body>
