--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -7,9 +7,9 @@
   <body>
     <h1><%= @post.name%></h1>
     <p><%= @post.content%></p>
-    <!-- <form action="/posts/<%= @post.id %>/delete" method="post">
-      <input type="hidden" name="_method" value="delete">
-      <input id="delete" type="submit" value="delete">
-    </form> -->
+    <form action="/posts/<%= @post.id %>/delete" method="post">
+      <input id= "hidden" type="hidden" name="_method" value="delete">
+      <input type="submit" value="delete">
+    </form>
   </body>
 </html>
